--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
             git pull
             echo BASE_URL=${{ secrets.BASE_URL }} > .env
             echo STORAGE_ACCOUNT_KEY=${{ secrets.STORAGE_ACCOUNT_KEY }} >> .env
-            sudo ~/.local/bin/docker-compose down
-            sudo ~/.local/bin/docker-compose up -d
+            sudo docker-compose down
+            sudo docker-compose up -d
